--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,3 @@
-/* Use your own code or past solution for Great Idea Web Page CSS here! */
-
-
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -68,34 +65,67 @@ h1, h2, h3, h4, h5 {
 
 /* Your code star ts here! */
 
-	
+.container {
+    width: 800px;
+    height: auto;
+    margin: 0 auto;
+    border: 1px solid red;
+    padding: 20px;
+  }
+  
+  @media(max-width: 800px) {
+    .container {
+      width: 500px;
+      background: gray;
+    }
+   
+   
+  
+    .container header nav {
+      display: flex;
+      flex-direction: column;
+    }
+  
+    .container header nav a {
+      margin-bottom: 20px;
+    }
+  }	
+
+  @media(max-width: 500px) {
+    .container {
+      width: 500px;
+      background: gray;
+    }
+   
+   
+  
+    .container header nav {
+      display: flex;
+      flex-direction: column;
+    }
+  
+    .container header nav a {
+      margin-bottom: 20px;
+    }
+  }	
 
 
 .nav-bar {
-	display: flex;
-	/* border-bottom: 1px solid black; */
-	align-content: center;
-	margin:0px 460px;
-	/*width: 1000px;*/
+    display: flex;
+    width: 100%
+	
+	
+	
 }
 .head {
 	display:flex;
 	border-bottom: 1px solid black;
 	padding:50px;
 }	
- .top  {
-	/*width: 8000px;
-	 height: 400px;*/
-	 margin: 0px 460px;
-	display:inline-flex;
-	flex-direction: column;
-	border-bottom: 1px solid black;
-	/*padding:50px; */
 
-}
-.services-header-img p {
-	font: bold;
-}	 
+
+
+ 
 
 header nav {
 	display: inline-block;
@@ -103,7 +133,7 @@ header nav {
 }
 
 header img.logo {
-	margin-left: 100%; 
+	margin-left: 95%; 
 }
 header nav a {
 	padding: 5px;
@@ -116,60 +146,52 @@ a {
 .quote {
 	display: flex;
 	flex-direction: column; 
-	width:100px; 
-	margin-left:400px; 
-	
 	
 }
+
 .logo2{
-	/* display: inline-block;  */
-	border-bottom: black;
-	/* width:50px; */
-	margin-left:400px;
-	padding:20px;
+    display: flex;
+    flex-direction: column;
+    width: 40%;
 
 }
-.main-content{
+/*.main-content{
 	display: flex;
-	padding: 30px;
+    padding: 30px;
+}*/
 	
 
-}
+
  .top-content {  
-	 /* display: inline-flex; */
-	 /* align-content: stretch; */
-	 height: 400px;
-	 width: 2000px;
-	 /* border: 1px solid red; */
-	 display:flex;
+	  width: 100%;
+	  display:flex;
 	 justify-content: space-around;
 	 align-items: center; 
-	 /* flex-direction: row; */
 	 flex-wrap: wrap;
-	 
+	 padding: 5px;
 
  }
 .features { 
 	  
-	width:300px;
-	/* margin:100px; */
+	width:30%;
+    margin:0 auto;
 	
 } 
 .about {  
     
-	width:300px;
-	/* margin: 10px; */
+	width:30%;
+	margin:0 auto; 
 }
 .middle-img {
-    height: 200px;
-	width: 1500px;
-	/* margin: 150px; */
+    width: 97%;
+    margin:0 auto;
+    padding: 5%;
 }
 
 .bottom {  
 	
 	display:flex; 
-	width: 2000px;
+	width: 100%;
 	height: 350px;
 	border-bottom: 1px solid black; 
 	padding: 0px;
@@ -178,23 +200,23 @@ a {
 		
 }
  .services { 
-	
-	  width:325px;  
-	  margin:100px;   
+	  
+	  width:30%;  
+	  margin:0 auto;   
 	
 }
 
 .product  { 
 	
-	width:325px;  
-    margin:100px;
+	width:30%;  
+    margin:0 auto;
 }
 	
 	
 .vision  { 
 	
-	 width:325px;  
-	 margin:100px;
+    width:30%;  
+	margin:0 auto;
 	
  } 
 h1 {
@@ -211,16 +233,16 @@ h1 {
 	  font-size: 30px;
 	  padding: 10px;
   }
-  .container {
+ /* .container {
 	  display: flex;
 	  flex-direction: row;
 	  flex-wrap: wrap;
 	  height: 800px;
 	  width: 900px;
 	  border-bottom: 2px solid black;
-	  /* padding: 10px; */
+	  padding: 10px; 
 	  margin: 0px 460px;
-	  /* align-content: stretch; */
+	  align-content: stretch; 
   }
 
   .child1 {
@@ -285,11 +307,11 @@ h1 {
 	box-sizing: border-box;
 }
 .facts {
-	/*display: flex;
+	display: flex;
 	padding: 20px;
 	margin: 20px;
 	flex-direction: row;
-	flex-wrap: wrap;*/
+	flex-wrap: wrap;
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
@@ -319,8 +341,6 @@ h1 {
 	
 }
 .factschild4 {
-	
-	
-	margin: 20px;
-	
+
+    margin: 20px;
 }
